--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <header class="header">
-      Main header...
+      <h1 class="heading-text">
+        <span class="heading-main"></span>
+        <span class="heading-sub"></span>
+      </h1>
     </header>
   </body>
 </html>
