--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="heading-text">
-        <span class="heading-main"></span>
-        <span class="heading-sub"></span>
-      </h1>
+      <div class="logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="logo">
+      </div>
+      <div class="heading-primary">
+        <h1 class="text-box">
+          <span class="heading-primary-main">solar system</span>
+          <span class="heading-primary-sub">a place for the navigator</span>
+        </h1>
+      </div>
     </header>
   </body>
 </html>
