--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <div class="logo-box">
         <img src="img/logo-white.png" alt="Logo" class="logo">
       </div>
-      <div class="heading-primary">
-        <h1 class="text-box">
+      <div class="text-box">
+        <h1 class="heading-primary">
           <span class="heading-primary-main">solar system</span>
           <span class="heading-primary-sub">a place for the navigator</span>
         </h1>
+        <a href="#" class="btn btn-yellow btn-animated">Take a look</a>
       </div>
     </header>
   </body>
