Implement BEM system

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="logo">
+      <div class="header__logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="header__logo">
       </div>
       <div class="text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">solar system</span>
-          <span class="heading-primary-sub">a place for the navigator</span>
+          <span class="heading-primary--main">solar system</span>
+          <span class="heading-primary--sub">a place for the navigator</span>
         </h1>
-        <a href="#" class="btn btn-yellow btn-animated">Take a look</a>
+        <a href="#" class="btn btn--yellow btn--animated">Take a look</a>
       </div>
     </header>
   </body>
