Add features section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/icon-font.css" media="all">
     <link rel="stylesheet" href="css/style.css">
     <title>The amazing universe</title>
   </head>
@@ -23,18 +24,72 @@
 
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
-            Exciting tours for adventurous people
+            Discover the this fascinating planets
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            Text content
+            <h3 class="heading-tertiary u-margin-bottom-small">There's more than the earth</h3>
+            <p class="paragraph">
+              Elit eos quidem consequuntur accusantium ullam nemo dolores alias. Eius dolor quam unde minus sunt! Nisi impedit possimus aspernatur adipisci quas? Dolores facilis recusandae vitae magni alias Velit magni dolorum?
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">The sky full of stars</h3>
+            <p class="paragraph">
+              Adipisicing magni distinctio fugit placeat reiciendis Eum esse nostrum expedita culpa unde? Nisi minima est nihil at sit. Debitis neque assumenda vel dolores pariatur.
+            </p>
+
+            <a class="btn-text" href="#">Learn more &rarr;</a>
           </div>  
           <div class="col-1-of-2">
-            Image composition
+            <div class="composition">
+              <img class="composition__photo composition__photo--p1" src="img/space-1.jpg" alt="Photo 1">
+              <img class="composition__photo composition__photo--p2" src="img/space-2.jpg" alt="Photo 2">
+              <img class="composition__photo composition__photo--p3" src="img/space-3.jpg" alt="Photo 3">
+            </div>
           </div>  
+        </div>
+      </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Admire the Universe</h3>
+              <p class="feature-box__text">
+                Lorem voluptate atque nostrum in aut? Quasi possimus et temporibus quod blanditiis Asperiores laudantium ipsa praesentium a provident dolore Officia liberoamet!
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Time to travel</h3>
+              <p class="feature-box__text">
+                Lorem voluptate atque nostrum in aut? Quasi possimus et temporibus quod blanditiis Asperiores laudantium ipsa praesentium a provident dolore Officia liberoamet!
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Travel to the space</h3>
+              <p class="feature-box__text">
+                Lorem voluptate atque nostrum in aut? Quasi possimus et temporibus quod blanditiis Asperiores laudantium ipsa praesentium a provident dolore Officia liberoamet!
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">live the dream</h3>
+              <p class="feature-box__text">
+                Lorem voluptate atque nostrum in aut? Quasi possimus et temporibus quod blanditiis Asperiores laudantium ipsa praesentium a provident dolore Officia liberoamet!
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
