Create stories section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
-            Discover the this fascinating planets
+            Discover this fascinating planets
           </h2>
         </div>
         <div class="row">
@@ -121,16 +121,125 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
-                BACK
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$287</p>
+                  </div>
+                  <a class="btn btn--yellow" href="#">Book now!</a>
+                </div>
               </div>
             </div>
           </div>  
           <div class="col-1-of-3">
-            Col 1 of 3
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--2">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">
+                    A night at the moon
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Brand new ship</li>
+                    <li>Pet friendly</li>
+                    <li>2 free snacks</li>
+                    <li>Internet access (wifi)</li>
+                    <li>Gluten free meals</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$1000</p>
+                  </div>
+                  <a class="btn btn--yellow" href="#">Book now!</a>
+                </div>
+              </div>
+            </div>
           </div>  
           <div class="col-1-of-3">
-            Col 1 of 3
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--3">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">
+                    Take me to the stars
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Brand new ship</li>
+                    <li>Pet friendly</li>
+                    <li>2 free snacks</li>
+                    <li>Internet access (wifi)</li>
+                    <li>Gluten free meals</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$1</p>
+                  </div>
+                  <a class="btn btn--yellow" href="#">Book now!</a>
+                </div>
+              </div>
+            </div>
           </div>  
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a class="btn btn--blue" href="#">The next step</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            They had a really great time
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="img/space-8.jpg" alt="Person on the snow">
+              <figcaption class="story__caption">Fulano Perez</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">The best experience I've ever had</h3>
+              <p>
+                Consectetur cumque iure enim doloremque sit Rerum nam quod laudantium quos quo corporis Natus ex molestiae harum animi officiis Harum fuga explicabo nihil voluptate eius aperiam? Explicabo maxime ipsum ad.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="img/space-9.jpg" alt="Person on the snow">
+              <figcaption class="story__caption">Bardomiano Gutierrez</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">Please don't wake me up!</h3>
+              <p>
+                Consectetur cumque iure enim doloremque sit Rerum nam quod laudantium quos quo corporis Natus ex molestiae harum animi officiis Harum fuga explicabo nihil voluptate eius aperiam? Explicabo maxime ipsum ad.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a class="btn-text" href="#">Hear more from others &rarr;</a>
         </div>
       </section>
     </main>
