Add background video to stories section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/bg-video.mp4"></source>
+            Your browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             They had a really great time
