Add booking section

--- a/index.html
+++ b/index.html
@@ -248,6 +248,52 @@
           <a class="btn-text" href="#">Hear more from others &rarr;</a>
         </div>
       </section>
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form class="form" action="#">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">
+                    Start Discovering
+                  </h2>
+                </div>
+                <div class="form__group">
+                  <input class="form__input" type="text" placeholder="Full Name" id="name" required>
+                  <label class="form__label" for="name">Full name</label>
+                </div>
+
+                <div class="form__group">
+                  <input class="form__input" type="email" placeholder="Email address" id="email" required>
+                  <label class="form__label" for="email">Email address</label>
+                </div>
+
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="noob" name="size">
+                    <label class="form__radio-label" for="noob">
+                      <span class="form__radio-button"></span>
+                      Inexperienced navigator
+                    </label>
+                  </div>
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="expert" name="size">
+                    <label class="form__radio-label" for="expert">
+                      <span class="form__radio-button"></span>
+                      Expert navigator
+                    </label>
+                  </div>
+                </div>
+
+                <div class="form__group">
+                  <button class="btn btn--blue">Continue</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- <div class="test-grid">
       <div class="row">
