Add footer section

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </div>
 
                 <div class="form__group">
-                  <button class="btn btn--blue">Continue</button>
+                  <button class="btn btn--blue">Continue &rarr;</button>
                 </div>
               </form>
             </div>
@@ -295,6 +295,30 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-white.png" alt="Full logo" class="footer__logo">
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a class="footer__link" href="#">Company</a></li>
+              <li class="footer__item"><a class="footer__link" href="#">Contact</a></li>
+              <li class="footer__item"><a class="footer__link" href="#">Carrers</a></li>
+              <li class="footer__item"><a class="footer__link" href="#">Privacy policy</a></li>
+              <li class="footer__item"><a class="footer__link" href="#">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Developed by <a class="footer__link" href="#">Alvaro Padilla</a>. Copyright &copy; this page was build as part of an online course from Jonas Schmedtmann, the whole design was taken from his original page.
+          </p>
+        </div>
+      </div>
+    </footer>
     <!-- <div class="test-grid">
       <div class="row">
         <div class="col-1-of-2">
