Add navigation section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <title>The amazing universe</title>
   </head>
   <body>
+    <div class="navigation">
+      <input id="navi-toggle" class="navigation__checkbox" type="checkbox">
+      <label class="navigation__button" for="navi-toggle">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+      <div class="navigation__background">&nbsp;</div>
+      <div class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a class="navigation__link" href="#"><span>I.</span>About</a></li>
+          <li class="navigation__item"><a class="navigation__link" href="#"><span>II.</span>Benefits</a></li>
+          <li class="navigation__item"><a class="navigation__link" href="#"><span>III.</span>Popular planets</a></li>
+          <li class="navigation__item"><a class="navigation__link" href="#"><span>IV.</span>Stories</a></li>
+          <li class="navigation__item"><a class="navigation__link" href="#"><span>V.</span>Book now</a></li>
+        </ul>
+      </div>
+    </div>
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo">
