--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$287</p>
                   </div>
-                  <a class="btn btn--yellow" href="#">Book now!</a>
+                  <a class="btn btn--yellow" href="#popup">Book now!</a>
                 </div>
               </div>
             </div>
@@ -174,7 +174,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$1000</p>
                   </div>
-                  <a class="btn btn--yellow" href="#">Book now!</a>
+                  <a class="btn btn--yellow" href="#popup">Book now!</a>
                 </div>
               </div>
             </div>
@@ -206,7 +206,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$1</p>
                   </div>
-                  <a class="btn btn--yellow" href="#">Book now!</a>
+                  <a class="btn btn--yellow" href="#popup">Book now!</a>
                 </div>
               </div>
             </div>
@@ -330,11 +330,29 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Developed by <a class="footer__link" href="#">Alvaro Padilla</a>. Copyright &copy; this page was build as part of an online course from Jonas Schmedtmann, the whole design was taken from his original page.
+            Developed by <a class="footer__link" href="https://github.com/ese-varo/universe-css">Alvaro Padilla</a>. Copyright &copy; this page was build as part of an online course from Jonas Schmedtmann, the whole design was taken from his original page.
           </p>
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img class="popup__img" src="img/space-8.jpg" alt="Space photo">
+          <img class="popup__img" src="img/space-9.jpg" alt="Space photo">
+        </div>
+        <div class="popup__right">
+          <a class="popup__close" href="#section-tours">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+          <p class="popup__text">
+            Elit consectetur unde deleniti error dolorum  reprehenderit? Accusantium ipsum sapiente laudantium nesciunt voluptas Incidunt ratione odio nostrum placeat aspernatur? Modi odio laborum maxime sint illum veniam. Necessitatibus assumenda temporibus optio Dolor sapiente praesentium praesentium consectetur incidunt Voluptate consequuntur perferendis rem impedit id! Molestias quos amet necessitatibus ea molestias ab? Dignissimos unde reprehenderit nisi nam fuga aliquam mollitia distinctio. Rerum Adipisicing laudantium ipsum aperiam dignissimos id Architecto expedita perspiciatis ad ullam in mollitia. Cumque laborum exercitationem perspiciatis maiores corporis sequi. Obcaecati rerum dicta at dolorum adipisci voluptas. Debitis sed Adipisicing et nemo ducimus facilis nobis Vero iusto quis ea doloribus officia laudantium qui! Distinctio reiciendis autem vero adipisci et, vitae Illum natus expedita vel officiis fugit.
+          </p>
+          <a class="btn btn--blue" href="#">Book now</a>
+        </div>
+      </div>
+    </div>
     <!-- <div class="test-grid">
       <div class="row">
         <div class="col-1-of-2">
